<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_news">

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.messenger.ui.news.NewsFeedFragment"
        android:label="@string/news_feed_title"
        tools:layout="@layout/fragment_news_feed" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.messenger.ui.profile.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.messenger.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings" />
</navigation>
